--- a/package/ci/appveyor.yml
+++ b/package/ci/appveyor.yml
@@ -1,9 +1,8 @@
 version: '{branch}-{build}'
 branches:
   only:
-  - master
+  - compatibility
 skip_tags: true
-os: Visual Studio 2015
 shallow_clone: true
 clone_depth: 1
 environment:
@@ -13,7 +12,7 @@ install:
 - ps: cinst ninja
 build_script:
 - set PATH=C:/Sys/bin;C:/tools/ninja;%PATH%
-- call "C:/Program Files (x86)/Microsoft Visual Studio 14.0/VC/vcvarsall.bat"
+- call "C:/Program Files (x86)/Microsoft Visual Studio 12.0/VC/vcvarsall.bat"
 - mkdir build
 - cd build
 - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=C:/Sys -DBUILD_STATIC=%BUILD_STATIC% -DBUILD_TESTS=ON -G Ninja
@@ -22,11 +21,11 @@ build_script:
 - cmake . -DCMAKE_INSTALL_PREFIX=%APPVEYOR_BUILD_FOLDER%/Deploy -DBUILD_TESTS=OFF
 - cmake --build . --target install
 - cd ../Deploy
-- 7z a ../corrade.zip *
+- 7z a ../corrade-compatibility.zip *
 test_script:
 - cd %APPVEYOR_BUILD_FOLDER%/build
 - SET fail=0
 - ctest --output-on-failure || SET fail=1 & ver > nul
 - cd %APPVEYOR_BUILD_FOLDER%
-- appveyor PushArtifact corrade.zip
+- appveyor PushArtifact corrade-compatibility.zip
 - exit %fail%
