Modern CMake usage: reworked to use target-specific properties.
Please note that this is not exactly backwards compatible, but if you
are using this library through Magnum, nothing should change for you,
hopefully. In any case, recreate the build dir and update your copy of
Find*.cmake modules to avoid weird things happening.

User-facing changes:

 * Documentation of Find*.cmake modules converted to reStructuredText to
   follow official CMake guidelines.
 * The finding process is now componented to avoid future splitting. So
   to make any use of the library, you have to specify at least one of
   Containers, TestSuite, Utility, rc or PluginManager components.
 * The newfangled way to use the libraries is to use Corrade::Utility
   instead of ${CORRADE_UTILITY_LIBRARIES} and
   ${CORRADE_UTILITY_INCLUDE_DIRS}. The ${CORRADE_*_LIBRARIES} are
   deprecated and now expand to Corrade::*. They are exposed only if
   building with BUILD_DEPRECATED. The ${CORRADE_*_INCLUDE_DIRS} are
   removed, as linking to Corrade::* handles that implicitly.
 * Dropped support for OSX 10.8 and older. OSX 10.9 switched to using
   libc++ by default so we expect that to be done implicitly. If you are
   still on older version, add "-stdlib=libc++" to CMAKE_CXX_FLAGS and
   "-lc++" to CMAKE_EXE_LINKER_FLAGS.
 * Setting up C++11 support is no longer done globally on the
   CMAKE_CXX_FLAGS variable, but rather via new custom properties
   CORRADE_USE_CXX11 and INTERFACE_CORRADE_USE_CXX11.
   INTERFACE_CORRADE_USE_CXX11 is set on all Corrade targets so you get
   C++11 support every time you link to any Corrade library.
 * ${CORRADE_CXX_FLAGS} are deprecated, use CORRADE_USE_PEDANTIC_FLAGS
   target property instead.
 * Added new Corrade::rc target which replaces the old
   ${CORRADE_RC_EXECUTABLE}. That variable is deprecated and just
   expands to the target now.
 * The Corrade::Containers target works only on CMake 3.0+, because it
   is an header-only library. However, it is listed as a 

--- a/src/Corrade/Containers/CMakeLists.txt
+++ b/src/Corrade/Containers/CMakeLists.txt
@@ -32,10 +32,17 @@ set(CorradeContainers_HEADERS
     Tags.h)
 
 # Force IDEs to display all header files in project view
-add_custom_target(CorradeContainers SOURCES ${CorradeContainers_HEADERS})
+add_custom_target(CorradeContainers-headers SOURCES ${CorradeContainers_HEADERS})
 
 install(FILES ${CorradeContainers_HEADERS} DESTINATION ${CORRADE_INCLUDE_INSTALL_DIR}/Containers)
 
 if(BUILD_TESTS)
     add_subdirectory(Test)
+endif()
+
+# Corrade::Containers target alias for superprojects
+if(NOT CMAKE_VERSION VERSION_LESS 3.0.0)
+    add_library(CorradeContainers INTERFACE)
+    target_link_libraries(CorradeContainers INTERFACE CorradeUtility)
+    add_library(Corrade::Containers ALIAS CorradeContainers)
 endif()
