--- a/src/examples/resource/CMakeLists.txt
+++ b/src/examples/resource/CMakeLists.txt
@@ -28,12 +28,11 @@ project(CorradeResourceExample)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../../../modules")
 
-find_package(Corrade REQUIRED)
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CORRADE_CXX_FLAGS}")
-include_directories(${CORRADE_INCLUDE_DIR})
+set(CORRADE_USE_PEDANTIC_CXX ON)
+find_package(Corrade REQUIRED Utility)
 
 corrade_add_resource(Resources resources.conf)
 
 add_executable(ResourceTest main.cpp ${Resources})
-target_link_libraries(ResourceTest ${CORRADE_UTILITY_LIBRARY})
+set_target_properties(ResourceTest PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)
+target_link_libraries(ResourceTest Corrade::Utility)
